generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider            = "prisma-dbml-generator"
  output              = "../dbml"
  projectName         = "Omnify"
  projectDatabaseType = "PostgreSQL"
  outputName          = "er.diagram.dbml"
  projectNote         = "Omnify"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String         @id @default(uuid())
  email         String?
  name          String?
  username      String         @unique
  password      String
  role          Role           @default(USER)
  subscriptions Subscription[]
}

model Bike {
  id            String         @id @default(uuid())
  name          String
  image         String?
  description   String?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  subscriptions Subscription[]
}

model Plan {
  id            String         @id @default(uuid())
  name          String
  description   String?
  costPerUnit   Float
  type          PlanType
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  subscriptions Subscription[]
}

model Subscription {
  id        String   @id @default(uuid())
  plan      Plan     @relation(fields: [planId], references: [id])
  planId    String
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  bike      Bike     @relation(fields: [bikeId], references: [id])
  bikeId    String
  startDate DateTime
  endDate   DateTime
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum PlanType {
  DAILY
  MONTHLY
  YEARLY
}

enum Role {
  USER
  ADMIN
}
