//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Omnify" {
  database_type: 'PostgreSQL'
  Note: 'Omnify'
}

Table User {
  id String [pk]
  email String
  name String
  username String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  subscriptions Subscription [not null]
}

Table Bike {
  id String [pk]
  name String [not null]
  image String
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscriptions Subscription [not null]
}

Table Plan {
  id String [pk]
  name String [not null]
  description String
  costPerUnit Float [not null]
  type PlanType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscriptions Subscription [not null]
}

Table Subscription {
  id String [pk]
  plan Plan [not null]
  planId String [not null]
  user User [not null]
  userId String [not null]
  bike Bike [not null]
  bikeId String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum PlanType {
  DAILY
  MONTHLY
  YEARLY
}

Enum Role {
  USER
  ADMIN
}

Ref: Subscription.planId > Plan.id

Ref: Subscription.userId > User.id

Ref: Subscription.bikeId > Bike.id